# Autoweave-Web

./: .env.example  .gitignore  README.md  context.md  docker-compose.yml  implementation.md  task.md
backend/: pyproject.toml
backend/src/autoweave_web/: __init__.py  main.py  matrix_bridge.py
backend/src/autoweave_web/api/: __init__.py  app.py
backend/src/autoweave_web/core/: settings.py
backend/src/autoweave_web/db/: migrations.py  session.py
backend/src/autoweave_web/models/: __init__.py  entities.py
backend/src/autoweave_web/schemas/: api.py
backend/src/autoweave_web/services/: __init__.py  containers.py  context.py  flags.py  github.py  matrix.py  navigation.py  policy.py  product_state.py  repo_access.py  runtime.py
backend/tests/: conftest.py  test_api.py  test_context.py  test_matrix_service.py  test_packaging_boundary.py  test_runtime_manager.py  test_settings.py
docker/: backend-entrypoint.sh  backend.Dockerfile  frontend.Dockerfile  openhands-entrypoint.sh  synapse-entrypoint.sh  worker-entrypoint.sh  worker.Dockerfile
docker/synapse/: autoweave.local.signing.key  homeserver.yaml
docs/implementation/: linear-orbit-replatform.md
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/app/: globals.css  layout.tsx
frontend/components/: auth-entry.tsx  authenticated-shell.tsx  chat-screen.tsx  dashboard.test.tsx  dashboard.tsx  inbox-screen.test.tsx  inbox-screen.tsx  landing-page.test.tsx  landing-page.tsx  my-work-screen.test.tsx  my-work-screen.tsx  ui.tsx  (+9 more)
tests/: test_stack_smoke.py
(+24 files in other folders)
