[project]
name = "autoweave-web-backend"
version = "0.1.0"
description = "Backend API for the AutoWeave Web product."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.12",
  "uvicorn[standard]>=0.34.0",
  "sqlalchemy>=2.0.44",
  "psycopg[binary]>=3.2.12",
  "pydantic>=2.12.3",
  "pydantic-settings>=2.10.1",
  "redis>=6.4.0",
  "httpx>=0.28.1",
  "docker>=7.1.0",
  "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "pytest-cov>=6.3.0",
  "pytest-asyncio>=1.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

